--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon-vnpt.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web tool bras gpon vnpt" />
